<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.album.AlbumTrackCreateFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/post_result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/create_track"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/album_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/name"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:paddingBottom="20dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_track_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_gray"
                    android:hint="@string/track_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/album_imageURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/duration"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:paddingBottom="20dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_track_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/duration_placeholder"
                    android:backgroundTint="@color/dark_gray"/>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_track_button"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/black"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="1dp"/>

                <Button
                    android:id="@+id/post_track_button"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/orange"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/cancel_track_button"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>
        </LinearLayout>
</layout>