<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.album.AlbumCreateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/post_result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/create_album"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/album_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/name"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:paddingBottom="20dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_post_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_gray"
                    android:hint="@string/albumTitle" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/album_imageURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/coverURL"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:paddingBottom="20dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_post_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sampleURL"
                    android:backgroundTint="@color/dark_gray"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/album_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/descriptionAlbum"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:paddingBottom="20dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_post_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sampleDescriptionAlbum"
                    android:singleLine="false"
                    android:backgroundTint="@color/dark_gray"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/album_releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/releaseDate"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:paddingBottom="20dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_post_releaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sampleDate"
                    android:backgroundTint="@color/dark_gray"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/album_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/genreAlbum"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                android:backgroundTint="@color/dark_gray"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="20dp">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/txt_post_genre"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/light_yellow"
                    android:entries="@array/genre_array"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/album_recordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/recordLabel"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                android:backgroundTint="@color/dark_gray"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="20dp">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/txt_post_recordLabel"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/light_yellow"
                    android:entries="@array/rLabel_array"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/black"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Space
                    android:layout_width="50dp"
                    android:layout_height="1dp"/>

                <Button
                    android:id="@+id/post_button"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/orange"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/cancel_button"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>