<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.collector.CollectorDetailsFragment" >

    <data>
        <variable name="collector" type="com.example.vinylteam8.models.CollectorDetails"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="1px"
                app:layout_constraintStart_toStartOf="@id/imageAlbumDetails">

                <ImageView
                    android:id="@+id/imageAlbumDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:icon="@drawable/ic_baseline_album_24"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/_57873"
                    android:contentDescription="@string/vinylimageDescription"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@+id/imageAlbumDetails"
                    android:gravity="center_vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="start"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView6"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:text="@string/collecionista"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/lineView1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@+id/textView15"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/dark_gray" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lineView1"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="start"
                        android:text="@{collector.name}"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView16"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:text="@string/telephone"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/lineView2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@+id/textView7"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/dark_gray" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lineView2"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="start"
                        android:text="@{collector.telephone}"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView8"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/lineView3"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@+id/textView9"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/dark_gray" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lineView3"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="start"
                        android:text="@{collector.email}"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />


                </RelativeLayout>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
</layout>