<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.performer.PerformerDetailsFragment" >

    <data>
        <variable name="performer" type="com.example.vinylteam8.models.PerformerDetails"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="38dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="1px"
                app:layout_constraintStart_toStartOf="@id/imagePerformerDetails">

                <ImageView
                    android:id="@+id/imagePerformerDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:importantForAccessibility="no"
                    android:contentDescription="@string/performerImageDescription"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@+id/imagePerformerDetails"
                    android:gravity="center_vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="start"
                        android:text="@{performer.name}"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView6"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/lineView1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@+id/textView7"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/dark_gray" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lineView1"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="start"
                        android:text="@{performer.description}"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView8"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="start"
                        android:text="@string/best_album"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/lineView2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@+id/textView15"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/dark_gray" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/lineView2"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="start"
                        android:text="@{performer.albums[0].name}"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                </RelativeLayout>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
</layout>